--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <p class="card-text mt-2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra.</p>
                               <div class="d-flex ms-2 mt-4" width="100">
                                 <div>
-                                  <img src="/images/avuno.png" width="50" alt="avatar">
+                                  <img src="/images/uno.png" width="50" alt="avatar">
                                 </div>
                                 <div class="ms-3">
                                   <p class="fw-bold">Dianne Russell</p>
@@ -201,7 +201,7 @@
                           <p class="card-text mt-2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra.</p>
                             <div class="d-flex ms-2 mt-4" width="100">
                               <div>
-                                <img src="/images/avdos.png" width="50" alt="avatar">
+                                <img src="/images/dos.png" width="50" alt="avatar">
                               </div>
                               <div class="ms-3">
                                 <p class="fw-bold">Kristin Watson</p>
@@ -221,7 +221,7 @@
                         <p class="card-text mt-2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra.</p>
                           <div class="d-flex ms-2 mt-4" width="100">
                             <div>
-                              <img src="/images/avtres.png" width="50" alt="avatar">
+                              <img src="/images/tres.png" width="50" alt="avatar">
                             </div>
                             <div class="ms-3">
                               <p class="fw-bold">Kathryn Murphy</p>
